--- a/index.html
+++ b/index.html
@@ -8,7 +8,21 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet"/>
   <style>
- 
+   .video-popup {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.8);
+            justify-content: center;
+            align-items: center;
+            z-index: 1000;
+        }
+        .video-popup.active {
+            display: flex;
+        }
   </style>
 
  </head>
@@ -93,28 +107,9 @@
         </div>
     </div>
     
-        <!-- Product List -->
-         <div class="p-4 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4" id="all">
-        <div class="space-y-2 cursor-pointer product-item lehanga" data-name="Traditional Red Lehanga" data-price="300.99" data-image="https://storage.googleapis.com/a1aa/image/x9N3dCWEzBAG79kAu7fEZcTV84uWrOCM0UoB90qxltI.jpg">
-            <img alt="Traditional Red Lehanga on a mannequin" class="w-full h-48 object-cover rounded-lg item-photo" height="200" src="https://storage.googleapis.com/a1aa/image/x9N3dCWEzBAG79kAu7fEZcTV84uWrOCM0UoB90qxltI.jpg" width="300"/>
-            <div class="text-sm product-name">Traditional Red Lehanga</div>
-            <div class="text-sm text-gray-500 product-price">$300.99 <span class="text-red-500">10% Off</span></div>
-            <div class="flex space-x-2">
-                <button class="flex-1 px-2 py-1 border rounded-lg text-xs add-to-cart">Add to Bag</button>
-                <button class="flex-1 px-2 py-1 bg-black text-white rounded-lg text-xs buy-now" data-name="Traditional Red Lehanga" data-price="300.99" data-image="https://storage.googleapis.com/a1aa/image/x9N3dCWEzBAG79kAu7fEZcTV84uWrOCM0UoB90qxltI.jpg">Buy Now</button>
-            </div>
-        </div>
-        <div class="space-y-2 cursor-pointer product-item dress" data-name="Beach Dress" data-price="156.99" data-image="https://storage.googleapis.com/a1aa/image/8-cV9q2grVC4VYyLCW8xJBl1qtft5tHto_abEeDFT1I.jpg">
-            <img alt="Beach Dress on a hanger" class="w-full h-48 object-cover rounded-lg item-photo" height="200" src="https://storage.googleapis.com/a1aa/image/8-cV9q2grVC4VYyLCW8xJBl1qtft5tHto_abEeDFT1I.jpg" width="150"/>
-            <div class="text-sm product-name">Beach Dress</div>
-            <div class="text-sm text-gray-500 product-price">$156.99</div>
-            <div class="flex space-x-2">
-                <button class="flex-1 px-2 py-1 border rounded-lg text-xs add-to-cart">Add to Bag</button>
-                <button class="flex-1 px-2 py-1 bg-black text-white rounded-lg text-xs buy-now" data-name="Beach Dress" data-price="156.99" data-image="https://storage.googleapis.com/a1aa/image/8-cV9q2grVC4VYyLCW8xJBl1qtft5tHto_abEeDFT1I.jpg">Buy Now</button>
-            </div>
-        </div>
-        <div class="space-y-2 cursor-pointer product-item dress">
-            <img alt="Sequin Backles dress on a mannequin" class="w-full h-48 object-cover rounded-lg" height="200" src="https://storage.googleapis.com/a1aa/image/JRt1-arjmOAWRnRnFoVOh7gUIJhCJ-SdFBeC4LtHbg8.jpg" width="150"/>
+        <div class="p-4 grid grid-cols-2 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4" id="all">
+        <div class="space-y-2 cursor-pointer product-item dress" data-video="https://www.w3schools.com/html/mov_bbb.mp4">
+            <img alt="Sequin Backles dress on a mannequin" class="w-full h-48 object-cover rounded-lg item-photo" height="200" src="https://storage.googleapis.com/a1aa/image/JRt1-arjmOAWRnRnFoVOh7gUIJhCJ-SdFBeC4LtHbg8.jpg" width="150"/>
             <div class="text-sm product-name">Sequin Backles</div>
             <div class="text-sm text-gray-500 product-price">$100.99 <span class="text-red-500">10% Off</span></div>
             <div class="flex space-x-2">
@@ -122,8 +117,8 @@
                 <button class="flex-1 px-2 py-1 bg-black text-white rounded-lg text-xs">Buy Now</button>
             </div>
         </div>
-        <div class="space-y-2 cursor-pointer product-item dress">
-            <img alt="Casual Beach dress on a hanger" class="w-full h-48 object-cover rounded-lg" height="200" src="https://storage.googleapis.com/a1aa/image/xpdQXvr7JdhquEtGowr-sALc8mIP9GcJKXnIj0V3AKI.jpg" width="150"/>
+        <div class="space-y-2 cursor-pointer product-item dress" data-video="https://www.w3schools.com/html/movie.mp4">
+            <img alt="Casual Beach dress on a hanger" class="w-full h-48 object-cover rounded-lg item-photo" height="200" src="https://storage.googleapis.com/a1aa/image/xpdQXvr7JdhquEtGowr-sALc8mIP9GcJKXnIj0V3AKI.jpg" width="150"/>
             <div class="text-sm product-name">Casual Beach</div>
             <div class="text-sm text-gray-500 product-price">$120.99</div>
             <div class="flex space-x-2">
@@ -131,8 +126,8 @@
                 <button class="flex-1 px-2 py-1 bg-black text-white rounded-lg text-xs">Buy Now</button>
             </div>
         </div>
-        <div class="space-y-2 cursor-pointer product-item dress">
-            <img alt="Boho Strappy dress on a hanger" class="w-full h-48 object-cover rounded-lg" height="200" src="https://storage.googleapis.com/a1aa/image/qGXvATDdkpu0588vloa429WDCLVGFXFLOUsCJLndW6s.jpg" width="150"/>
+        <div class="space-y-2 cursor-pointer product-item dress" data-video="https://www.w3schools.com/html/mov_bbb.mp4">
+            <img alt="Boho Strappy dress on a hanger" class="w-full h-48 object-cover rounded-lg item-photo" height="200" src="https://storage.googleapis.com/a1aa/image/qGXvATDdkpu0588vloa429WDCLVGFXFLOUsCJLndW6s.jpg" width="150"/>
             <div class="text-sm product-name">Boho Strappy</div>
             <div class="text-sm text-gray-500 product-price">$110.99 <span class="text-red-500">30% Off</span></div>
             <div class="flex space-x-2">
@@ -140,8 +135,17 @@
                 <button class="flex-1 px-2 py-1 bg-black text-white rounded-lg text-xs">Buy Now</button>
             </div>
         </div>
-        <div class="space-y-2 cursor-pointer product-item pants">
-            <img alt="Denim Jeans on a hanger" class="w-full h-48 object-cover rounded-lg" height="200" src="https://storage.googleapis.com/a1aa/image/YDD6-xNMMb2nd2Io8ujXxz3dihrgUNLcoZEFcGgHd2s.jpg" width="150"/>
+        <div class="space-y-2 cursor-pointer product-item dress" data-video="https://www.w3schools.com/html/movie.mp4">
+            <img alt="Beach Dress on a hanger" class="w-full h-48 object-cover rounded-lg item-photo" height="200" src="https://storage.googleapis.com/a1aa/image/8-cV9q2grVC4VYyLCW8xJBl1qtft5tHto_abEeDFT1I.jpg" width="150"/>
+            <div class="text-sm product-name">Beach Dress</div>
+            <div class="text-sm text-gray-500 product-price">$156.99</div>
+            <div class="flex space-x-2">
+                <button class="flex-1 px-2 py-1 border rounded-lg text-xs add-to-cart">Add to Bag</button>
+                <button class="flex-1 px-2 py-1 bg-black text-white rounded-lg text-xs">Buy Now</button>
+            </div>
+        </div>
+        <div class="space-y-2 cursor-pointer product-item pants" data-video="https://www.w3schools.com/html/mov_bbb.mp4">
+            <img alt="Denim Jeans on a hanger" class="w-full h-48 object-cover rounded-lg item-photo" height="200" src="https://storage.googleapis.com/a1aa/image/YDD6-xNMMb2nd2Io8ujXxz3dihrgUNLcoZEFcGgHd2s.jpg" width="150"/>
             <div class="text-sm product-name">Denim Jeans</div>
             <div class="text-sm text-gray-500 product-price">$80.99</div>
             <div class="flex space-x-2">
@@ -149,8 +153,8 @@
                 <button class="flex-1 px-2 py-1 bg-black text-white rounded-lg text-xs">Buy Now</button>
             </div>
         </div>
-        <div class="space-y-2 cursor-pointer product-item pants">
-            <img alt="Chino Pants on a hanger" class="w-full h-48 object-cover rounded-lg" height="200" src="https://storage.googleapis.com/a1aa/image/2gckCnAxUnOl3O7pnnwFfvfPiIfD_YzmII33wL6AXcI.jpg" width="150"/>
+        <div class="space-y-2 cursor-pointer product-item pants" data-video="https://www.w3schools.com/html/movie.mp4">
+            <img alt="Chino Pants on a hanger" class="w-full h-48 object-cover rounded-lg item-photo" height="200" src="https://storage.googleapis.com/a1aa/image/2gckCnAxUnOl3O7pnnwFfvfPiIfD_YzmII33wL6AXcI.jpg" width="150"/>
             <div class="text-sm product-name">Chino Pants</div>
             <div class="text-sm text-gray-500 product-price">$70.99</div>
             <div class="flex space-x-2">
@@ -158,8 +162,8 @@
                 <button class="flex-1 px-2 py-1 bg-black text-white rounded-lg text-xs">Buy Now</button>
             </div>
         </div>
-        <div class="space-y-2 cursor-pointer product-item blazers">
-            <img alt="Formal Blazer on a mannequin" class="w-full h-48 object-cover rounded-lg" height="200" src="https://storage.googleapis.com/a1aa/image/BBsdRy8aiYcEfXGOvcGrCU8F5rcVQD7NDuOSntKSKlw.jpg" width="150"/>
+        <div class="space-y-2 cursor-pointer product-item blazers" data-video="https://www.w3schools.com/html/mov_bbb.mp4">
+            <img alt="Formal Blazer on a mannequin" class="w-full h-48 object-cover rounded-lg item-photo" height="200" src="https://storage.googleapis.com/a1aa/image/BBsdRy8aiYcEfXGOvcGrCU8F5rcVQD7NDuOSntKSKlw.jpg" width="150"/>
             <div class="text-sm product-name">Formal Blazer</div>
             <div class="text-sm text-gray-500 product-price">$150.99</div>
             <div class="flex space-x-2">
@@ -167,8 +171,8 @@
                 <button class="flex-1 px-2 py-1 bg-black text-white rounded-lg text-xs">Buy Now</button>
             </div>
         </div>
-        <div class="space-y-2 cursor-pointer product-item blazers">
-            <img alt="Casual Blazer on a mannequin" class="w-full h-48 object-cover rounded-lg" height="200" src="https://storage.googleapis.com/a1aa/image/0tBcX1VtKJZA26-wS-IdGfb4psuA_D2VfHtldEcRwGE.jpg" width="150"/>
+        <div class="space-y-2 cursor-pointer product-item blazers" data-video="https://www.w3schools.com/html/movie.mp4">
+            <img alt="Casual Blazer on a mannequin" class="w-full h-48 object-cover rounded-lg item-photo" height="200" src="https://storage.googleapis.com/a1aa/image/0tBcX1VtKJZA26-wS-IdGfb4psuA_D2VfHtldEcRwGE.jpg" width="150"/>
             <div class="text-sm product-name">Casual Blazer</div>
             <div class="text-sm text-gray-500 product-price">$130.99</div>
             <div class="flex space-x-2">
@@ -176,8 +180,8 @@
                 <button class="flex-1 px-2 py-1 bg-black text-white rounded-lg text-xs">Buy Now</button>
             </div>
         </div>
-        <div class="space-y-2 cursor-pointer product-item jackets">
-            <img alt="Leather Jacket on a mannequin" class="w-full h-48 object-cover rounded-lg" height="200" src="https://storage.googleapis.com/a1aa/image/n_4Tanf3ID1VYqqxr7-8_TyZhe0i3PHi6md1F8iSN5c.jpg" width="150"/>
+        <div class="space-y-2 cursor-pointer product-item jackets" data-video="https://www.w3schools.com/html/mov_bbb.mp4">
+            <img alt="Leather Jacket on a mannequin" class="w-full h-48 object-cover rounded-lg item-photo" height="200" src="https://storage.googleapis.com/a1aa/image/n_4Tanf3ID1VYqqxr7-8_TyZhe0i3PHi6md1F8iSN5c.jpg" width="150"/>
             <div class="text-sm product-name">Leather Jacket</div>
             <div class="text-sm text-gray-500 product-price">$200.99</div>
             <div class="flex space-x-2">
@@ -185,8 +189,8 @@
                 <button class="flex-1 px-2 py-1 bg-black text-white rounded-lg text-xs">Buy Now</button>
             </div>
         </div>
-        <div class="space-y-2 cursor-pointer product-item jackets">
-            <img alt="Denim Jacket on a mannequin" class="w-full h-48 object-cover rounded-lg" height="200" src="https://storage.googleapis.com/a1aa/image/T8U-W5i2ag8espW2tJOz3t-O9O0nO1uLUCk0PO5kL9Y.jpg" width="150"/>
+        <div class="space-y-2 cursor-pointer product-item jackets" data-video="https://www.w3schools.com/html/movie.mp4">
+            <img alt="Denim Jacket on a mannequin" class="w-full h-48 object-cover rounded-lg item-photo" height="200" src="https://storage.googleapis.com/a1aa/image/T8U-W5i2ag8espW2tJOz3t-O9O0nO1uLUCk0PO5kL9Y.jpg" width="150"/>
             <div class="text-sm product-name">Denim Jacket</div>
             <div class="text-sm text-gray-500 product-price">$180.99</div>
             <div class="flex space-x-2">
@@ -195,25 +199,16 @@
             </div>
         </div>
     </div>
-    <div class="bg-white rounded-lg shadow-lg w-full max-w-md mt-8 hidden" id="product-detail">
-        <div class="relative">
-            <img alt="Product Image" class="w-full h-80 object-cover rounded-t-lg" height="320" id="product-image" src="https://storage.googleapis.com/a1aa/image/6WNZyIZYEoJCUyPOXwIjOWOabVClBFBjL4cl2m5nR_0.jpg" width="300"/>
-            <div class="absolute top-4 left-4">
-                <i class="fas fa-arrow-left text-xl text-white"></i>
-            </div>
-            <div class="absolute top-4 right-4 flex space-x-4">
-                <i class="fas fa-heart text-xl text-white"></i>
-                <i class="fas fa-shopping-bag text-xl text-white"></i>
-            </div>
-        </div>
-        <div class="p-4">
-            <h2 class="text-2xl font-bold mb-2" id="product-title">Product Title</h2>
-            <p class="text-gray-700 mb-4" id="product-description">Product description goes here. It provides details about the product.</p>
-            <div class="text-xl font-semibold mb-4" id="product-price">$0.00</div>
-            <div class="flex space-x-2">
-                <button class="flex-1 px-4 py-2 border rounded-lg">Add to Bag</button>
-                <button class="flex-1 px-4 py-2 bg-black text-white rounded-lg">Buy Now</button>
-            </div>
+
+    <div class="video-popup" id="video-popup">
+        <div class="relative bg-white rounded-lg shadow-lg p-4 w-11/12 sm:w-3/4 md:w-1/2 lg:w-1/3 xl:w-1/4">
+            <button class="absolute top-2 right-2 text-red-500" id="close-popup">
+                <i class="fas fa-times text-2xl"></i>
+            </button>
+            <video id="popup-video" class="w-full h-auto rounded-lg" controls autoplay>
+                <source src="" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
         </div>
     </div>
 
@@ -450,7 +445,7 @@
 
       <div id="custom-notification" class="hidden fixed bottom-4 right-4 bg-blue-500 text-white p-4 rounded-lg shadow-lg flex items-center space-x-4">
         <i class="fas fa-info-circle"></i>
-        <span>@ यो अभिषेक राजवंशी द्वारा विकास गरिएको हो !🇳🇵❤️!रिपब्लिक नेपाल ग्रुपमा स्वागत छ।</span>
+        <span>@ यो अभिषेक राजवंशी द्वारा विकास गरिएको हो !🇳🇵❤️!Welcome to Trendy_Tides </span>
     </div>
 
  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.3.1/jspdf.umd.min.js"></script>
@@ -1039,7 +1034,7 @@ function showCategory(category) {
             const fiveDaysInMilliseconds = 5 * 24 * 60 * 60 * 1000;
 
             if (!lastNotificationTime || (currentTime - lastNotificationTime) > fiveDaysInMilliseconds) {
-                showNotification("@ यो अभिषेक राजवंशी द्वारा विकास गरिएको हो !🇳🇵❤️!रिपब्लिक नेपाल ग्रुपमा स्वागत छ।");
+                showNotification("@ यो अभिषेक राजवंशी द्वारा विकास गरिएको हो !🇳🇵❤️!Welcome to Trendy_Tides");
             }
         }
 
@@ -1063,6 +1058,30 @@ function showCategory(category) {
             // Check every minute for the daily morning notification
             setInterval(showDailyMorningNotification, 60000); // 60000 milliseconds = 1 minute
         };
+
+
+
+
+
+
+      document.querySelectorAll('.item-photo').forEach(item => {
+            item.addEventListener('click', function() {
+                const videoSrc = this.closest('.product-item').getAttribute('data-video');
+                const videoPopup = document.getElementById('video-popup');
+                const popupVideo = document.getElementById('popup-video');
+                popupVideo.src = videoSrc;
+                videoPopup.classList.add('active');
+                popupVideo.play();
+            });
+        });
+
+        document.getElementById('close-popup').addEventListener('click', function() {
+            const videoPopup = document.getElementById('video-popup');
+            const popupVideo = document.getElementById('popup-video');
+            popupVideo.pause();
+            popupVideo.currentTime = 0;
+            videoPopup.classList.remove('active');
+        });
   </script>
  </body>
 </html>
